beldex_libwallet2_api_c/src/main/cpp/wallet2_api_c.h

//     virtual bool setDescription(std::size_t index, const std::string &description) = 0;
extern ADDAPI bool BELDEX_AddressBook_setDescription(void* addressBook_ptr, size_t rowId, const char* description);
//     virtual void refresh() = 0;  
extern ADDAPI void BELDEX_AddressBook_refresh(void* addressBook_ptr);
//     virtual std::string errorString() const = 0;
extern ADDAPI const char* BELDEX_AddressBook_errorString(void* addressBook_ptr);
//     virtual int errorCode() const = 0;
extern ADDAPI int BELDEX_AddressBook_errorCode(void* addressBook_ptr);
// };
// struct CoinsInfo
// {
//     virtual ~CoinsInfo() = 0;
//     virtual uint64_t blockHeight() const = 0;
extern ADDAPI uint64_t BELDEX_CoinsInfo_blockHeight(void* coinsInfo_ptr);
//     virtual std::string hash() const = 0;
extern ADDAPI const char* BELDEX_CoinsInfo_hash(void* coinsInfo_ptr);
//     virtual size_t internalOutputIndex() const = 0;
extern ADDAPI size_t BELDEX_CoinsInfo_internalOutputIndex(void* coinsInfo_ptr);
//     virtual uint64_t globalOutputIndex() const = 0;
extern ADDAPI uint64_t BELDEX_CoinsInfo_globalOutputIndex(void* coinsInfo_ptr);
//     virtual bool spent() const = 0;
extern ADDAPI bool BELDEX_CoinsInfo_spent(void* coinsInfo_ptr);
//     virtual bool frozen() const = 0;
extern ADDAPI bool BELDEX_CoinsInfo_frozen(void* coinsInfo_ptr);
//     virtual uint64_t spentHeight() const = 0;
extern ADDAPI uint64_t BELDEX_CoinsInfo_spentHeight(void* coinsInfo_ptr);
//     virtual uint64_t amount() const = 0;
extern ADDAPI uint64_t BELDEX_CoinsInfo_amount(void* coinsInfo_ptr);
//     virtual bool rct() const = 0;
extern ADDAPI bool BELDEX_CoinsInfo_rct(void* coinsInfo_ptr);
//     virtual bool keyImageKnown() const = 0;
extern ADDAPI bool BELDEX_CoinsInfo_keyImageKnown(void* coinsInfo_ptr);
//     virtual size_t pkIndex() const = 0;
extern ADDAPI size_t BELDEX_CoinsInfo_pkIndex(void* coinsInfo_ptr);
//     virtual uint32_t subaddrIndex() const = 0;
extern ADDAPI uint32_t BELDEX_CoinsInfo_subaddrIndex(void* coinsInfo_ptr);
//     virtual uint32_t subaddrAccount() const = 0;
extern ADDAPI uint32_t BELDEX_CoinsInfo_subaddrAccount(void* coinsInfo_ptr);
//     virtual std::string address() const = 0;
extern ADDAPI const char* BELDEX_CoinsInfo_address(void* coinsInfo_ptr);
//     virtual std::string addressLabel() const = 0;
extern ADDAPI const char* BELDEX_CoinsInfo_addressLabel(void* coinsInfo_ptr);
//     virtual std::string keyImage() const = 0;
extern ADDAPI const char* BELDEX_CoinsInfo_keyImage(void* coinsInfo_ptr);
//     virtual uint64_t unlockTime() const = 0;
extern ADDAPI uint64_t BELDEX_CoinsInfo_unlockTime(void* coinsInfo_ptr);
//     virtual bool unlocked() const = 0;
extern ADDAPI bool BELDEX_CoinsInfo_unlocked(void* coinsInfo_ptr);
//     virtual std::string pubKey() const = 0;
extern ADDAPI const char* BELDEX_CoinsInfo_pubKey(void* coinsInfo_ptr);
//     virtual bool coinbase() const = 0;
extern ADDAPI bool BELDEX_CoinsInfo_coinbase(void* coinsInfo_ptr);
//     virtual std::string description() const = 0;
extern ADDAPI const char* BELDEX_CoinsInfo_description(void* coinsInfo_ptr);
// };
// struct Coins
// {
//     virtual ~Coins() = 0;
//     virtual int count() const = 0;
extern ADDAPI int BELDEX_Coins_count(void* coins_ptr);
extern ADDAPI void BELDEX_Wallet_setLedgerCallback(void (*sendToLedgerDevice)(unsigned char *command, unsigned int cmd_len));