impls/monero.dart/lib/src/generated_bindings_beldex.g.dart


  late final _BELDEX_AddressBook_setDescriptionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<ffi.Void>, ffi.Size,
              ffi.Pointer<ffi.Char>)>>('BELDEX_AddressBook_setDescription');
  late final _BELDEX_AddressBook_setDescription =
      _BELDEX_AddressBook_setDescriptionPtr.asFunction<
          bool Function(ffi.Pointer<ffi.Void>, int, ffi.Pointer<ffi.Char>)>();

  void BELDEX_AddressBook_refresh(
    ffi.Pointer<ffi.Void> addressBook_ptr,
  ) {
    return _BELDEX_AddressBook_refresh(
      addressBook_ptr,
    );
  }

  late final _BELDEX_AddressBook_refreshPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_AddressBook_refresh');
  late final _BELDEX_AddressBook_refresh = _BELDEX_AddressBook_refreshPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> BELDEX_AddressBook_errorString(
    ffi.Pointer<ffi.Void> addressBook_ptr,
  ) {
    return _BELDEX_AddressBook_errorString(
      addressBook_ptr,
    );
  }

  late final _BELDEX_AddressBook_errorStringPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('BELDEX_AddressBook_errorString');
  late final _BELDEX_AddressBook_errorString =
      _BELDEX_AddressBook_errorStringPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  int BELDEX_AddressBook_errorCode(
    ffi.Pointer<ffi.Void> addressBook_ptr,
  ) {
    return _BELDEX_AddressBook_errorCode(
      addressBook_ptr,
    );
  }

  late final _BELDEX_AddressBook_errorCodePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_AddressBook_errorCode');
  late final _BELDEX_AddressBook_errorCode = _BELDEX_AddressBook_errorCodePtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  int BELDEX_CoinsInfo_blockHeight(
    ffi.Pointer<ffi.Void> coinsInfo_ptr,
  ) {
    return _BELDEX_CoinsInfo_blockHeight(
      coinsInfo_ptr,
    );
  }

  late final _BELDEX_CoinsInfo_blockHeightPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_CoinsInfo_blockHeight');
  late final _BELDEX_CoinsInfo_blockHeight = _BELDEX_CoinsInfo_blockHeightPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> BELDEX_CoinsInfo_hash(
    ffi.Pointer<ffi.Void> coinsInfo_ptr,
  ) {
    return _BELDEX_CoinsInfo_hash(
      coinsInfo_ptr,
    );
  }

  late final _BELDEX_CoinsInfo_hashPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('BELDEX_CoinsInfo_hash');
  late final _BELDEX_CoinsInfo_hash = _BELDEX_CoinsInfo_hashPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  int BELDEX_CoinsInfo_internalOutputIndex(
    ffi.Pointer<ffi.Void> coinsInfo_ptr,
  ) {
    return _BELDEX_CoinsInfo_internalOutputIndex(
      coinsInfo_ptr,
    );
  }

  late final _BELDEX_CoinsInfo_internalOutputIndexPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_CoinsInfo_internalOutputIndex');
  late final _BELDEX_CoinsInfo_internalOutputIndex =
      _BELDEX_CoinsInfo_internalOutputIndexPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  int BELDEX_CoinsInfo_globalOutputIndex(
    ffi.Pointer<ffi.Void> coinsInfo_ptr,
  ) {
    return _BELDEX_CoinsInfo_globalOutputIndex(
      coinsInfo_ptr,
    );
  }

  late final _BELDEX_CoinsInfo_globalOutputIndexPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_CoinsInfo_globalOutputIndex');
  late final _BELDEX_CoinsInfo_globalOutputIndex =
      _BELDEX_CoinsInfo_globalOutputIndexPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  bool BELDEX_CoinsInfo_spent(
    ffi.Pointer<ffi.Void> coinsInfo_ptr,
  ) {
    return _BELDEX_CoinsInfo_spent(
      coinsInfo_ptr,
    );
  }

  late final _BELDEX_CoinsInfo_spentPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_CoinsInfo_spent');
  late final _BELDEX_CoinsInfo_spent = _BELDEX_CoinsInfo_spentPtr.asFunction<
      bool Function(ffi.Pointer<ffi.Void>)>();

  bool BELDEX_CoinsInfo_frozen(
    ffi.Pointer<ffi.Void> coinsInfo_ptr,
  ) {
    return _BELDEX_CoinsInfo_frozen(
      coinsInfo_ptr,
    );
  }

  late final _BELDEX_CoinsInfo_frozenPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_CoinsInfo_frozen');
  late final _BELDEX_CoinsInfo_frozen = _BELDEX_CoinsInfo_frozenPtr.asFunction<
      bool Function(ffi.Pointer<ffi.Void>)>();

  int BELDEX_CoinsInfo_spentHeight(
    ffi.Pointer<ffi.Void> coinsInfo_ptr,
  ) {
    return _BELDEX_CoinsInfo_spentHeight(
      coinsInfo_ptr,
    );
  }

  late final _BELDEX_CoinsInfo_spentHeightPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_CoinsInfo_spentHeight');
  late final _BELDEX_CoinsInfo_spentHeight = _BELDEX_CoinsInfo_spentHeightPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  int BELDEX_CoinsInfo_amount(
    ffi.Pointer<ffi.Void> coinsInfo_ptr,
  ) {
    return _BELDEX_CoinsInfo_amount(
      coinsInfo_ptr,
    );
  }

  late final _BELDEX_CoinsInfo_amountPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_CoinsInfo_amount');
  late final _BELDEX_CoinsInfo_amount = _BELDEX_CoinsInfo_amountPtr.asFunction<
      int Function(ffi.Pointer<ffi.Void>)>();

  bool BELDEX_CoinsInfo_rct(
    ffi.Pointer<ffi.Void> coinsInfo_ptr,
  ) {
    return _BELDEX_CoinsInfo_rct(
      coinsInfo_ptr,
    );
  }

  late final _BELDEX_CoinsInfo_rctPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_CoinsInfo_rct');
  late final _BELDEX_CoinsInfo_rct = _BELDEX_CoinsInfo_rctPtr.asFunction<
      bool Function(ffi.Pointer<ffi.Void>)>();

  bool BELDEX_CoinsInfo_keyImageKnown(
    ffi.Pointer<ffi.Void> coinsInfo_ptr,
  ) {
    return _BELDEX_CoinsInfo_keyImageKnown(
      coinsInfo_ptr,
    );
  }

  late final _BELDEX_CoinsInfo_keyImageKnownPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_CoinsInfo_keyImageKnown');
  late final _BELDEX_CoinsInfo_keyImageKnown =
      _BELDEX_CoinsInfo_keyImageKnownPtr.asFunction<
          bool Function(ffi.Pointer<ffi.Void>)>();

  int BELDEX_CoinsInfo_pkIndex(
    ffi.Pointer<ffi.Void> coinsInfo_ptr,
  ) {
    return _BELDEX_CoinsInfo_pkIndex(
      coinsInfo_ptr,
    );
  }

  late final _BELDEX_CoinsInfo_pkIndexPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_CoinsInfo_pkIndex');
  late final _BELDEX_CoinsInfo_pkIndex = _BELDEX_CoinsInfo_pkIndexPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  int BELDEX_CoinsInfo_subaddrIndex(
    ffi.Pointer<ffi.Void> coinsInfo_ptr,
  ) {
    return _BELDEX_CoinsInfo_subaddrIndex(
      coinsInfo_ptr,
    );
  }

  late final _BELDEX_CoinsInfo_subaddrIndexPtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_CoinsInfo_subaddrIndex');
  late final _BELDEX_CoinsInfo_subaddrIndex = _BELDEX_CoinsInfo_subaddrIndexPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  int BELDEX_CoinsInfo_subaddrAccount(
    ffi.Pointer<ffi.Void> coinsInfo_ptr,
  ) {
    return _BELDEX_CoinsInfo_subaddrAccount(
      coinsInfo_ptr,
    );
  }

  late final _BELDEX_CoinsInfo_subaddrAccountPtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_CoinsInfo_subaddrAccount');
  late final _BELDEX_CoinsInfo_subaddrAccount =
      _BELDEX_CoinsInfo_subaddrAccountPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> BELDEX_CoinsInfo_address(
    ffi.Pointer<ffi.Void> coinsInfo_ptr,
  ) {
    return _BELDEX_CoinsInfo_address(
      coinsInfo_ptr,
    );
  }

  late final _BELDEX_CoinsInfo_addressPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('BELDEX_CoinsInfo_address');
  late final _BELDEX_CoinsInfo_address = _BELDEX_CoinsInfo_addressPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> BELDEX_CoinsInfo_addressLabel(
    ffi.Pointer<ffi.Void> coinsInfo_ptr,
  ) {
    return _BELDEX_CoinsInfo_addressLabel(
      coinsInfo_ptr,
    );
  }

  late final _BELDEX_CoinsInfo_addressLabelPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('BELDEX_CoinsInfo_addressLabel');
  late final _BELDEX_CoinsInfo_addressLabel = _BELDEX_CoinsInfo_addressLabelPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> BELDEX_CoinsInfo_keyImage(
    ffi.Pointer<ffi.Void> coinsInfo_ptr,
  ) {
    return _BELDEX_CoinsInfo_keyImage(
      coinsInfo_ptr,
    );
  }

  late final _BELDEX_CoinsInfo_keyImagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('BELDEX_CoinsInfo_keyImage');
  late final _BELDEX_CoinsInfo_keyImage = _BELDEX_CoinsInfo_keyImagePtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  int BELDEX_CoinsInfo_unlockTime(
    ffi.Pointer<ffi.Void> coinsInfo_ptr,
  ) {
    return _BELDEX_CoinsInfo_unlockTime(
      coinsInfo_ptr,
    );
  }

  late final _BELDEX_CoinsInfo_unlockTimePtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_CoinsInfo_unlockTime');
  late final _BELDEX_CoinsInfo_unlockTime = _BELDEX_CoinsInfo_unlockTimePtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  bool BELDEX_CoinsInfo_unlocked(
    ffi.Pointer<ffi.Void> coinsInfo_ptr,
  ) {
    return _BELDEX_CoinsInfo_unlocked(
      coinsInfo_ptr,
    );
  }

  late final _BELDEX_CoinsInfo_unlockedPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_CoinsInfo_unlocked');
  late final _BELDEX_CoinsInfo_unlocked = _BELDEX_CoinsInfo_unlockedPtr
      .asFunction<bool Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> BELDEX_CoinsInfo_pubKey(
    ffi.Pointer<ffi.Void> coinsInfo_ptr,
  ) {
    return _BELDEX_CoinsInfo_pubKey(
      coinsInfo_ptr,
    );
  }

  late final _BELDEX_CoinsInfo_pubKeyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('BELDEX_CoinsInfo_pubKey');
  late final _BELDEX_CoinsInfo_pubKey = _BELDEX_CoinsInfo_pubKeyPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  bool BELDEX_CoinsInfo_coinbase(
    ffi.Pointer<ffi.Void> coinsInfo_ptr,
  ) {
    return _BELDEX_CoinsInfo_coinbase(
      coinsInfo_ptr,
    );
  }

  late final _BELDEX_CoinsInfo_coinbasePtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_CoinsInfo_coinbase');
  late final _BELDEX_CoinsInfo_coinbase = _BELDEX_CoinsInfo_coinbasePtr
      .asFunction<bool Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> BELDEX_CoinsInfo_description(
    ffi.Pointer<ffi.Void> coinsInfo_ptr,
  ) {
    return _BELDEX_CoinsInfo_description(
      coinsInfo_ptr,
    );
  }

  late final _BELDEX_CoinsInfo_descriptionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('BELDEX_CoinsInfo_description');
  late final _BELDEX_CoinsInfo_description = _BELDEX_CoinsInfo_descriptionPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  int BELDEX_Coins_count(
    ffi.Pointer<ffi.Void> coins_ptr,
  ) {
    return _BELDEX_Coins_count(
      coins_ptr,
    );
  }
